[tool.poetry]
name = "code-to-image"
version = "0.1.0"
description = ""
authors = ["Tsvika S <tsvikas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.15.0"
streamlit = "^1.30.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
